格式化代码，替换mapper组件